# django-guardian

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  extras.py  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_test_and_report.sh  setup.cfg  setup.py  tests.py  tox.ini  utils.py
.github/: dependabot.yml
.github/workflows/: cd.yml  coverage.yml  release-publish.yml  tests.yml
benchmarks/: models.py  run_benchmarks.py  settings.py  utils.py
contrib/travis/: install.sh  test.sh
docs/: Makefile  assign.rst  changes.rst  check.rst  conf.py  configuration.md  configuration.rst  exts.py  index.md  index.rst  installation.md  installation.rst  license.md  license.rst  make.bat  overview.md  overview.rst  requirements.txt  testing.rst  watch-docs.sh  who-uses-guardian.md
docs/api/: admin.md  admin.rst  backends.md  backends.rst  core.md  core.rst  decorators.md  decorators.rst  forms.md  forms.rst  guardian.admin.md  guardian.admin.rst  guardian.backends.md  guardian.core.md  guardian.core.rst  guardian.decorators.md  guardian.decorators.rst  guardian.forms.md  guardian.management.commands.md  guardian.management.commands.rst  guardian.managers.md  guardian.mixins.md  guardian.mixins.rst  guardian.models.md  guardian.models.rst  guardian.shortcuts.md  guardian.shortcuts.rst  guardian.templatetags.guardian_tags.md  guardian.utils.md  guardian.utils.rst  guardian_tags.rst  index.md  index.rst  management.md  managers.md  managers.rst  mixins.md  models.md  models.rst  shortcuts.md  (+3 more)
docs/css/: readthedocs.css
docs/de/: configuration.md  index.md  installation.md
docs/develop/: changes.rst  example_project.rst  index.rst  makefile.md  overview.md  overview.rst  release.md  supported-versions.md  supported-versions.rst  testing.md  testing.rst
docs/es/: index.md  installation.md
docs/fr/: configuration.md  index.md
docs/ja/: configuration.md  index.md  installation.md
docs/javascript/: readthedocs.js
docs/ko/: configuration.md  index.md  installation.md
docs/overrides/: main.html
docs/pt/: configuration.md  index.md  installation.md
docs/ru/: configuration.md  index.md  installation.md
docs/tr/: configuration.md  index.md  installation.md
docs/userguide/: admin-integration.md  admin-integration.rst  assign.md  assign.rst  caveats.md  caveats.rst  check.rst  checks.md  custom-group-model.md  custom-group-model.rst  custom-user-model.md  custom-user-model.rst  entity-roles-with-groups.md  example_project.md  example_project.rst  examples.md  index.md  index.rst  performance.md  performance.rst  remove.md  remove.rst  shortcuts.md  signals.md  upgrading-to-direct-foreign-keys.md
docs/zh/: configuration.md  index.md  installation.md
example_project/: .post_test.sh  .pre_test.sh  context_processors.py  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py
example_project/articles/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
example_project/core/: admin.py  models.py
example_project/integration_tests/: tests.py
example_project/posts/: admin.py  models.py  urls.py  views.py
example_project/templates/: 403.html  404.html  500.html  base.html  base_1col.html  home.html
example_project_custom_group/: manage.py  pyproject.toml  settings.py  urls.py
example_project_custom_group/articles/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
example_project_custom_group/articles/migrations/: 0001_initial.py  0002_initial.py
example_project_custom_group/articles/templates/articles/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
example_project_custom_group/core/: admin.py  backends.py  context_processors.py  mixins.py  models.py
example_project_custom_group/core/migrations/: 0001_initial.py
example_project_custom_group/posts/: admin.py  models.py  urls.py  views.py
example_project_custom_group/posts/migrations/: 0001_initial.py
example_project_custom_group/posts/templates/posts/: post_detail.html  post_list.html
example_project_custom_group/static/js/: bootstrap.min.js
example_project_custom_group/templates/: 403.html  404.html  500.html  base.html  home.html
guardian/: __init__.py  admin.py  apps.py  backends.py  checks.py  compat.py  core.py  ctypes.py  decorators.py  exceptions.py  forms.py  managers.py  mixins.py  mock.py  mock_compat.py  models.py  py.typed  shortcuts.py  signals.py  testsettings.py  utils.py  view_mixins.py
guardian/conf/: settings.py
guardian/fixtures/: tests.json
guardian/guardian/: __init__.py  forms.py  managers.py  mixins.py  models.py  shortcuts.py  testsettings.py  utils.py
guardian/management/: __init__.py
guardian/migrations/: 0001_initial.py  0002_auto__add_field_groupobjectpermission_object_pk__add_field_userobjectp.py  0002_generic_permissions_index.py  0002_pk_to_integer.py  0003_add_permission_user_index.py  0003_alter_id_bigautofield.py  0003_pk_to_int_from_makemigrations.py  0003_remove_groupobjectpermission_guardian_gr_content_ae6aec_idx_and_more.py  0003_update_objectpermission_object_pk.py  0004_auto_20220628_0702.py  0004_auto__del_field_groupobjectpermission_object_id__del_unique_groupobjec.py  0005_auto__chg_field_groupobjectpermission_object_pk__chg_field_userobjectp.py
guardian/models/: __init__.py  models.py
guardian/south_migrations/: 0004_auto__del_field_groupobjectpermission_object_id__del_unique_groupobjec.py  0005_auto__chg_field_groupobjectpermission_object_pk__chg_field_userobjectp.py
guardian/templatetags/: guardian_tags.py
guardian/testapp/: __init__.py  manage.py  models.py  testsettings.py
guardian/tests/: __init__.py  admin_test.py  conf.py  conf_test.py  core_test.py  custompkmodel_test.py  decorators_test.py  direct_rel_test.py  forms_test.py  managers_test.py  mixins_test.py  models.py  orphans_test.py  other_test.py  shortcuts_test.py  signals.py  tags_test.py  urls.py  (+2 more)
(+337 files in other folders)
